[gd_scene load_steps=13 format=2]

[ext_resource path="res://Pantallas/tilePlataforma.res" type="TileSet" id=1]
[ext_resource path="res://Pantallas/Entrada.gd" type="Script" id=2]
[ext_resource path="res://Pantallas/synthesize1-fecha1.mp3" type="AudioStream" id=3]
[ext_resource path="res://Pantallas/synthesize2-lugar.mp3" type="AudioStream" id=4]
[ext_resource path="res://Pantallas/synthesize3-impero.mp3" type="AudioStream" id=5]
[ext_resource path="res://Pantallas/synthesize4vlac.mp3" type="AudioStream" id=6]
[ext_resource path="res://Pantallas/synthesize6mo.mp3" type="AudioStream" id=7]
[ext_resource path="res://Pantallas/manuscrito0-1280x720.png" type="Texture" id=8]
[ext_resource path="res://Pantallas/manuscrito1-2-1280x720.png" type="Texture" id=9]
[ext_resource path="res://Pantallas/manuscrito3-1280x720.png" type="Texture" id=10]
[ext_resource path="res://Pantallas/manuscrito4-1280x720.png" type="Texture" id=11]
[ext_resource path="res://Pantallas/manuscrito5-1280x720.png" type="Texture" id=12]

[node name="Entrada" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 17, 5, 0, 18, 5, 0, 19, 5, 0, 20, 5, 0, 131071, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 196607, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 262143, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 196624, 5, 0, 196625, 5, 0, 196626, 5, 0, 196627, 5, 0, 196628, 5, 0, 327679, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 393215, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 5, 0, 327695, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 327700, 5, 0, 458751, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 393231, 5, 0, 393232, 5, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 524287, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 5, 0, 458767, 5, 0, 458768, 5, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 458772, 5, 0, 589823, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 655359, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 720895, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0 )

[node name="animaentrada" type="Node2D" parent="."]

[node name="Audio1" type="AudioStreamPlayer2D" parent="animaentrada"]
stream = ExtResource( 3 )

[node name="Audio2" type="AudioStreamPlayer2D" parent="animaentrada"]
stream = ExtResource( 4 )

[node name="Audio3" type="AudioStreamPlayer2D" parent="animaentrada"]
stream = ExtResource( 5 )

[node name="Audio4" type="AudioStreamPlayer2D" parent="animaentrada"]
stream = ExtResource( 6 )

[node name="Audio5" type="AudioStreamPlayer2D" parent="animaentrada"]
stream = ExtResource( 7 )

[node name="Timer" type="Timer" parent="animaentrada"]
one_shot = true

[node name="Sprite0" type="Sprite" parent="animaentrada"]
visible = false
texture = ExtResource( 8 )
centered = false

[node name="Sprite1" type="Sprite" parent="animaentrada"]
visible = false
texture = ExtResource( 9 )
centered = false

[node name="Sprite3" type="Sprite" parent="animaentrada"]
visible = false
texture = ExtResource( 10 )
centered = false

[node name="Sprite4" type="Sprite" parent="animaentrada"]
visible = false
texture = ExtResource( 11 )
centered = false

[node name="Sprite5" type="Sprite" parent="animaentrada"]
visible = false
texture = ExtResource( 12 )
centered = false

[connection signal="finished" from="animaentrada/Audio1" to="." method="_on_Audio1_finished"]
[connection signal="finished" from="animaentrada/Audio2" to="." method="_on_Audio2_finished"]
[connection signal="finished" from="animaentrada/Audio3" to="." method="_on_Audio3_finished"]
[connection signal="finished" from="animaentrada/Audio4" to="." method="_on_Audio4_finished"]
[connection signal="finished" from="animaentrada/Audio5" to="." method="_on_Audio5_finished"]
[connection signal="timeout" from="animaentrada/Timer" to="." method="_on_Timer_timeout"]
